--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Odin Recipes</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
     <img src="./images/vikingchef.png" alt="viking chef" height="500" width="400">
-    <ul>
-        <li><a href="./recipes/pizza.html" target="_blank" rel="noopener noreferrer">Homemade pizza</a></li>
-        <li><a href="./recipes/chicken.html" target="_blank" rel="noopener noreferrer">Fried Chicken</a></li>
-        <li><a href="./recipes/tomatoSoup.html" target="_blank" rel="noopener noreferrer">Tomato Soup</a></li>
-    </ul>
+    <div class="container">
+        <ul class="recipes-list">
+            <li><a href="./recipes/pizza.html" target="_blank" rel="noopener noreferrer">Homemade pizza</a></li>
+            <li><a href="./recipes/chicken.html" target="_blank" rel="noopener noreferrer">Fried Chicken</a></li>
+            <li><a href="./recipes/tomatoSoup.html" target="_blank" rel="noopener noreferrer">Tomato Soup</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
